# oreginald-pro-studio

./: .gitignore  ARCHITECTURE.md  BUILD_INSTRUCTIONS_WINDOWS.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  arrangementArrangementView.cpp
build-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  OreginaldProStudio.slnx  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-win/JUCE/: ALL_BUILD.vcxproj  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  JUCE.slnx  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build-win/source/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  OreginaldProStudio.vcxproj  OreginaldProStudio.vcxproj.filters  OreginaldProStudio_rc_lib.vcxproj  OreginaldProStudio_rc_lib.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build-win/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  (+2 more)
docs/: README.md
projects/: default.ops.xml
source/: ArrangementView.cpp  ArrangementView.h  AudioClipSource.cpp  AudioClipSource.h  AudioEngine.cpp  AudioEngine.h  BrowserPanel.cpp  BrowserPanel.h  CMakeLists.txt  ClipComponent.cpp  ClipComponent.h  InspectorPanel.cpp  InspectorPanel.h  Main.cpp  MainComponent.cpp  MainComponent.h  ProjectFileService.cpp  ProjectFileService.h  StatusBar.cpp  StatusBar.h  TimelineGrid.cpp  TimelineGrid.h  TrackAudioChannel.cpp  TrackAudioChannel.h  TrackEngine.cpp  TrackEngine.h  TransportBar.cpp  TransportBar.h  TransportState.h
tests/: CMakeLists.txt  TrackEngine.cpp done  test_tracks.cpp
(+66 files in other folders)
